fix(core): Using JVM 11 in docker image
- To avoid the issue when 'data/ca.p12' is generated by JVM 11,
  which is incompatible with JVM 1.8 PKCS12